--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -11,7 +11,7 @@
             <div class="comment-author"><a href="{{ url_for('.user', username=comment.author.username) }}">{{ comment.author.username }}</a></div>
             <div class="comment-body">
                 {% if comment.disabled %}
-                <p><i>这条评论已经被管理员删除。</i></p>
+                <p><i>这条回答已经被管理员删除。</i></p>
                 {% endif %}
                 {% if moderate or not comment.disabled %}
                     {% if comment.body_html %}
