--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>编辑帖子</h1>
+    <h1>编辑回答</h1>
 </div>
 <div>
     {{ wtf.quick_form(form) }}
