修改css和其他

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">蛤乎-NJIT</a>
+            <a class="navbar-brand" href="/">略懂</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
