--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
+    <!-- <img class="img-rounded profile-thumbnail " src="{{ user.gravatar(size=256) }}">-->
     <div class="profile-header">
         <h1>{{ user.username }}</h1>
         {% if user.name or user.location %}
@@ -20,7 +20,7 @@
         {% endif %}
         {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
         <p>注册日期 {{ moment(user.member_since).format('L') }}。最后访问日期{{ moment(user.last_seen).fromNow() }}.</p>
-        <p>{{ user.posts.count() }}条微博</p>
+        <p>{{ user.posts.count() }}条动态</p>
         <p>
             {% if current_user.can(Permission.FOLLOW) and user != current_user %}
                 {% if not current_user.is_following(user) %}
