--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,14 @@
                 <li><a href="{{ url_for('main.user', username=current_user.username) }}">我的主页</a></li>
                 {% endif %}
             </ul>
+
+                  <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="搜索你感兴趣的内容...">
+            </div>
+            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
+          </form>
+
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.can(Permission.MODERATE_COMMENTS) %}
                 <li><a href="{{ url_for('main.moderate') }}">管理问题</a></li>
