--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -73,6 +73,10 @@ div.comment-content {
 div.comment-form {
     margin: 16px 0px 16px 32px;
 }
+
+div.comment-footer {
+    text-align: right;
+}
 div.pagination {
     width: 100%;
     text-align: right;
