--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -33,8 +33,8 @@
             <div class="comment-footer">
                 <!-- 添加赞同按钮 -->
                 {% if 1 %}
-                <a href="" class="btn btn-primary">赞同
-                    <span class="badge">{{ 123 }}</span></a>
+                <a href="{{ url_for('.vote', comment_id=comment.id) }}" class="btn btn-primary">赞同
+                    <span class="badge">{{ comment.vote_users.count() }}</span></a>
                 {% else %}
                 <a href="" class="btn btn-default">取消赞同</a>
                 {% endif %}
