--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,12 +3,20 @@
 {% block title %}NJIT-周伟{% endblock %}
 
 {% block head %}
-{{ super() }}
+
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="stylesheet"
       href="{{url_for('static', filename='css/bootstrap.min.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+{% endblock %}
+
+{% block scripts %}
+
+<script src="{{url_for('static', filename='js/jquery-2.2.3.min.js')}}"></script>
+<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+{{ moment.include_moment() }}
+{{ moment.lang('zh-cn') }}
 {% endblock %}
 
 {% block navbar %}
@@ -30,14 +38,14 @@
                 {% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('main.user', username=current_user.username) }}">我的主页</a></li>
                 {% endif %}
-            </ul>
 
-                  <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="搜索你感兴趣的内容...">
-            </div>
-            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
-          </form>
+                <li><form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="搜索你感兴趣的内容...">
+                </div>
+                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
+                </form></li>
+            </ul>
 
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.can(Permission.MODERATE_COMMENTS) %}
@@ -78,10 +86,3 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
-<script src="{{url_for('static', filename='js/jquery-2.2.3.min.js')}}"></script>
-<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-{{ super() }}
-{{ moment.include_moment() }}
-{{ moment.lang('zh-cn') }}
-{% endblock %}
